	* Add a "Present conversation window" preference to the Message
	  Notification plugin, the "Raise conversation window" option does not
	  unminimize windows or draw attention to them when they are on other
	  workspaces the "Present" option should.
	* Add a preference to set Escape as the keyboard shortcut for closing
	  the conversation window.

	General:
	* The configure script now dies on more absent dependencies.  The
	  --disable-xxx arguments to configure can be used to bypass unneeded
	  dependencies.  This will also cause the configure script to die if an
	  --enable-xxx option is used and the dependencies it requires are
	  missing.
	* The Evolution integration plugin must now be explicitly enabled.  Use
	  the --enable-gevolution argument to configure to enable it.
	* The Contact Availability Prediction plugin must now be explicitly
	  enabled.  Use the --enable-cap argument to configure to enable it.

	Finch:
	* New default binding ctrl+x to open context menus.

version 2.4.1 (03/31/2008):
	http://developer.pidgin.im/query?status=closed&milestone=2.4.1

	libpurple:
	* Treat AIM Unicode messages as UTF-16 rather than UCS-2; this
	  should have no functional effect, other than continued support
	  on systems which have dropped UCS-2 conversions.
	* Add support for setting buddy icons on Gadu-Gadu (Tomasz Salacinski)
	* Fix a crash when clearing the buddy icon for an account on XMPP
	* Fix a crash during login for some ICQ accounts
	* Prefer more available resources on XMPP when priorities are equal
	* Fix incorrectly marking some Yahoo! contacts as blocked
	* Improved handling of UTF-8 group names on ICQ (beret)
	* Fix a crash when starting if you have a Zephyr account
	* Increase XMPP ping timeout to 120 seconds, to prevent poor network
	  connections from timing out unnecessarily.
	* Don't crash on XMPP forms with empty default values.
	* Fix issues with CHAP authentication for SOCKS5 proxies.

	Pidgin: